added account activation route
